[tool.poetry]
name = "test01-api"
version = "0.1.0"
description = ""
authors = ["william-cass-wright <william.cass.wright@gmail.com>"]

[tool.poetry.scripts]
start = "tracking_api.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.82.0"}
boto3 = "^1.24.70"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
